<resources>
    <string name="login_text_src">This App uses The Movie Database (TMDb) as its data source.</string>
    <string name="login_text_privacy">By signing in, you agree that you have read  and accepted the Privacy Policy. Click here to view it.</string>
    <string name="search_hint">Search for Movies or TV Shows…</string>
    <string name="search_empty">The search did not return any Results.</string>
    <string name="dialog_logout_title">Logout</string>
    <string name="dialog_logout_message">Are you sure that you want to log out? Don\'t worry, your watchables are saved with your account.</string>
    <string name="dialog_delete_watchable_title">Watch out!</string>
    <string name="dialog_delete_watchable_message">Are you sure you want to delete this Watchable?</string>
    <string name="dev_info"><![CDATA[<html>Programmed by <b>Florian Schuster</b><br><b>Web:</b> <a href="https://florianschuster.at/">https://florianschuster.at/</a><br><b>Mail:</b> <a href="mailto:mail@florianschuster.at">mail@florianschuster.at</a><br><br><b>Data Source:</b> <a href="https://www.themoviedb.org/">The Movie Database (TMDb)</a></html>]]></string>
    <string name="dev_mail">mail@florianschuster.at</string>
    <string name="imdb_search">https://www.imdb.com/title/%s/</string>
    <string name="tmdb_url">https://www.themoviedb.org/</string>
    <string name="analytics_watchable_add_event">watchable_add</string>
    <string name="analytics_watchable_delete_event">watchable_delete</string>
    <string name="analytics_watchable_watched_event">watchable_watched</string>
    <string name="display_name_movie">Movie</string>
    <string name="display_name_show">TV Show</string>
    <string name="notification_add_channel_name">Watchables Add Notifications</string>
    <string name="notification_add_channel_description">These notifications are displayed when a Watchable is being added to your list.</string>
    <string name="notification_add_error_notification_title">Sorry!</string>
    <string name="notification_add_error_notification_text">An error occurred while trying to add %s</string>
    <string name="notification_message_channel_name">Message Notifications</string>
    <string name="notification_message_channel_description">These notifications are displayed when a message is received from the Server.</string>
    <string name="notification_update_channel_name">Watchable Update Notifications</string>
    <string name="notification_update_channel_description">These notifications are displayed when a watchable is updated with new information.</string>
    <string name="notification_update_title_show_name">%1$s - S%2$d</string>
    <string name="notification_update_title">%1$s will air on %2$s</string>
    <string name="notification_update_text">Click here to learn more</string>
    <string name="menu_watchable_delete">Delete</string>
    <string name="menu_watchable_website">Open Website</string>
    <string name="menu_watchable_imdb">Open Imdb</string>
    <string name="menu_watchable_share">Share Watchable</string>
    <string name="release_date_past">Aired on %s</string>
    <string name="release_date_future">Airing on %s</string>
    <string name="release_date_not_available">No airing information available.</string>
    <string name="watchable_watched">Watched</string>
    <string name="watchable_not_watched">Not yet Watched</string>
    <string name="empty_watchable_title">Oh no :(</string>
    <string name="empty_watchable_text">You have not added any watchables yet. Add some by using the search on the upper left!</string>
    <string name="settings_logout">Logout</string>
    <string name="settings_analytics">Analytics</string>
    <string name="settings_licenses">Open Source Licenses</string>
    <string name="settings_privacy_policy">Privacy Policy</string>
    <string name="settings_developer_info">Developer Info</string>
    <string name="settings_share_app">Share App with Friends</string>
    <string name="privacy_policy_url">https://florianschuster.at/watchables/privacy.html</string>
    <string name="developer_url">https://florianschuster.at/</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="youtube_url">https://www.youtube.com/watch?v=%s</string>
    <string name="youtube_thumbnail">https://img.youtube.com/vi/%s/sddefault.jpg</string>
    <string name="video_type_trailer">Trailer</string>
    <string name="video_type_teaser">Teaser</string>
    <string name="video_type_clip">Clip</string>
    <string name="video_type_featurette">Featurette</string>
    <string name="video_type_openingCredits">Opening Credits</string>
    <string name="episode_name">S%1$sE%2$s</string>
    <string name="dialog_options_watchable">Actions for \"%s\"</string>
    <string name="error_not_authenticated">User is not authenticated!</string>
    <string name="error_network_unavailable">No internet connection.</string>
    <string name="error_server_unavailable">The server cannot be reached.</string>
    <string name="error_server_error">A server error (%d) occurred.</string>
    <string name="error_server_error_no_code">A server error occurred.</string>
    <string name="error_permission">Please give the permission to use this feature.</string>
    <string name="error_other">An error occurred.</string>
    <string name="sign_in_google">Sign in with Google</string>
    <string name="menu_watchable_season_set_watched">Set season watched</string>
    <string name="menu_watchable_season_set_not_watched">Set season not watched</string>
    <string name="onboarding_snack">By long pressing Watchables and Episodes, you get more options!</string>
    <string name="settings_rate_app">Rate App in Play Store</string>
    <string name="share_app_chooser_title">Share App</string>
    <string name="share_app_chooser_text">Check out Watchables: %s</string>
    <string name="share_watchable_chooser_title">Share %s</string>
    <string name="share_watchable_chooser_text_movie">Check out this Movie: %s</string>
    <string name="share_watchable_chooser_text_show">Check out this Show: %s</string>
    <string name="app_link">https://watchables.page.link/app</string>
    <string name="playstore_link">https://play.google.com/store/apps/details?id=%s</string>
    <string name="deeplink_domain">https://watchables.page.link</string>
    <string name="enjoying_dialog_title">Are you enjoying Watchables?</string>
    <string name="enjoying_dialog_message">If you do, you could rate it on the Play Store! If you do not… well maybe you could give me some Feedback?</string>
    <string name="enjoying_dialog_positive">Rate now</string>
    <string name="enjoying_dialog_negative">Write me</string>
    <string name="enjoying_dialog_neutral">Not now</string>
</resources>
