<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group>
        <item
            android:id="@+id/rateApp"
            android:icon="@drawable/ic_star"
            android:title="@string/settings_rate_app" />

        <item
            android:id="@+id/shareApp"
            android:icon="@drawable/ic_share"
            android:title="@string/settings_share_app" />
    </group>
    <group>
        <item
            android:id="@+id/devInfo"
            android:icon="@drawable/ic_code"
            android:title="@string/settings_developer_info" />

        <item
            android:id="@+id/privacyPolicy"
            android:icon="@drawable/ic_phonelink_lock"
            android:title="@string/settings_privacy_policy" />

        <item
            android:id="@+id/licenses"
            android:icon="@drawable/ic_search"
            android:title="@string/settings_licenses" />
    </group>
    <group>
        <item
            android:id="@+id/logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/settings_logout" />
    </group>
</menu>